# codicefiscale

./: .gitignore  Cargo.toml  README.md  load_script_template
migrations/2023-11-27-192548_create_cities/: down.sql  up.sql
migrations/2023-11-27-214720_create_nations/: down.sql  up.sql
src/: cli.rs  db_utils.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
